PSVAMB-70091 clean up

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,10 +1,13 @@
 ---
-title: Welcome!
-description: Get started building your docs site with Starlight.
+title: Kaltura MediaSpace (KMS) Developer Documentation
 template: splash
 hero:
     tagline: MediaSpace (KMS) Module Developer Documentation
     actions:
         - text: Getting started
           link: /misc-kms-documentation/guides/getting-started
+        - text: Kitchen Sink module example
+          link: /misc-kms-documentation/reference/kitchensink-module-example/
+        - text: Module structure
+          link: /misc-kms-documentation/reference/module-structure/
 ---
